# serializer version: 1
# name: test_calculate_regionprops[pyramid height array (5 layers)]
  list([
    np.int64(165),
  ])
# ---
# name: test_calculate_regionprops[pyramid height array (5 layers)].1
  list([
    tuple(
      np.float64(5.0),
      np.float64(5.0),
      np.float64(0.7878787878787878),
    ),
  ])
# ---
# name: test_calculate_regionprops[sample1]
  list([
    np.float64(15645682811.73706),
    np.float64(73313713.07373047),
    np.float64(465214252.4719238),
    np.float64(533878803.2531738),
    np.float64(142395496.3684082),
    np.float64(232100486.7553711),
    np.float64(26643276.21459961),
    np.float64(202953815.46020508),
    np.float64(28371810.913085938),
    np.float64(56922435.76049805),
    np.float64(505328178.4057617),
    np.float64(208199024.20043945),
    np.float64(38385391.23535156),
    np.float64(286102294.921875),
    np.float64(759005546.5698242),
    np.float64(302374362.94555664),
    np.float64(28252601.623535156),
    np.float64(41127204.89501953),
    np.float64(176846981.04858398),
    np.float64(11265277.862548828),
    np.float64(1057267189.0258789),
    np.float64(59843063.35449219),
    np.float64(25272369.384765625),
    np.float64(14781951.904296875),
    np.float64(40888786.31591797),
    np.float64(122725963.5925293),
    np.float64(43928623.19946289),
    np.float64(20325183.868408203),
    np.float64(18537044.525146484),
    np.float64(32484531.40258789),
    np.float64(5841255.187988281),
    np.float64(16689300.537109375),
    np.float64(90539455.41381836),
    np.float64(1013278.9611816406),
    np.float64(6794929.504394531),
    np.float64(46491622.92480469),
    np.float64(78439712.52441406),
    np.float64(129878520.96557617),
    np.float64(14662742.614746094),
    np.float64(81241130.82885742),
    np.float64(476837.158203125),
    np.float64(8404254.913330078),
    np.float64(17881393.432617188),
    np.float64(7152557.373046875),
    np.float64(54001808.166503906),
    np.float64(30815601.348876953),
    np.float64(596046.4477539062),
    np.float64(894069.6716308594),
    np.float64(15556812.286376953),
    np.float64(19848346.710205078),
    np.float64(2622604.3701171875),
    np.float64(4887580.871582031),
    np.float64(14364719.39086914),
    np.float64(9000301.361083984),
    np.float64(3874301.9104003906),
    np.float64(13887882.232666016),
    np.float64(6437301.6357421875),
    np.float64(4529953.0029296875),
    np.float64(2384185.791015625),
    np.float64(6258487.701416016),
    np.float64(6198883.056640625),
    np.float64(9238719.940185547),
    np.float64(2026557.9223632812),
  ])
# ---
# name: test_calculate_regionprops[sample1].1
  list([
    tuple(
      np.float64(9967.418972221905),
      np.float64(9971.379673493568),
      np.float64(0.0806575273056981),
    ),
    tuple(
      np.float64(775.2794715447154),
      np.float64(8056.370680894309),
      np.float64(76.53709349593495),
    ),
    tuple(
      np.float64(2182.785474055093),
      np.float64(15421.920043241513),
      np.float64(70.9931534272902),
    ),
    tuple(
      np.float64(2689.3595791001453),
      np.float64(17150.05111225857),
      np.float64(40.32286200736854),
    ),
    tuple(
      np.float64(3563.3698723315197),
      np.float64(2544.1476559229804),
      np.float64(80.62670050230221),
    ),
    tuple(
      np.float64(4774.342337570622),
      np.float64(12478.974062660503),
      np.float64(79.31874357986646),
    ),
    tuple(
      np.float64(2195.0153803131993),
      np.float64(5799.4267337807605),
      np.float64(97.7873322147651),
    ),
    tuple(
      np.float64(4964.20704845815),
      np.float64(7470.379038179149),
      np.float64(80.31617107195301),
    ),
    tuple(
      np.float64(3768.3823529411766),
      np.float64(14321.576286764706),
      np.float64(82.3923319327731),
    ),
    tuple(
      np.float64(2618.7418193717276),
      np.float64(4336.837369109948),
      np.float64(44.82984293193717),
    ),
    tuple(
      np.float64(5958.109408174098),
      np.float64(8691.286454647323),
      np.float64(55.84767191554612),
    ),
    tuple(
      np.float64(3929.2647795591183),
      np.float64(2226.8644431720586),
      np.float64(47.349162610936155),
    ),
    tuple(
      np.float64(7099.730687111802),
      np.float64(9954.750582298137),
      np.float64(82.7348602484472),
    ),
    tuple(
      np.float64(5363.924153645833),
      np.float64(7270.442708333333),
      np.float64(44.392903645833336),
    ),
    tuple(
      np.float64(12275.036320087953),
      np.float64(14682.555069106329),
      np.float64(78.82747467410083),
    ),
    tuple(
      np.float64(7896.392359057757),
      np.float64(3551.9385718509757),
      np.float64(44.29085353834023),
    ),
    tuple(
      np.float64(8304.489715189873),
      np.float64(11639.553665611815),
      np.float64(80.18525843881856),
    ),
    tuple(
      np.float64(8526.268115942028),
      np.float64(13520.210597826086),
      np.float64(61.82065217391305),
    ),
    tuple(
      np.float64(8370.671132457028),
      np.float64(8091.440744017526),
      np.float64(42.709386585776876),
    ),
    tuple(
      np.float64(4806.9609788359785),
      np.float64(5704.3650793650795),
      np.float64(115.12070105820106),
    ),
    tuple(
      np.float64(12328.143057982861),
      np.float64(14882.048339017927),
      np.float64(39.87731142180629),
    ),
    tuple(
      np.float64(14449.817915836653),
      np.float64(6483.052166334662),
      np.float64(81.27645667330677),
    ),
    tuple(
      np.float64(8903.854658018869),
      np.float64(6223.743366745283),
      np.float64(103.82886202830188),
    ),
    tuple(
      np.float64(14554.403981854839),
      np.float64(15497.259324596775),
      np.float64(88.36315524193549),
    ),
    tuple(
      np.float64(16913.891672740523),
      np.float64(2498.348669825073),
      np.float64(83.47758746355684),
    ),
    tuple(
      np.float64(15307.700188198154),
      np.float64(8313.653472559496),
      np.float64(64.2188258863526),
    ),
    tuple(
      np.float64(15446.118130936227),
      np.float64(6096.665111940299),
      np.float64(88.40739484396201),
    ),
    tuple(
      np.float64(13556.062133431085),
      np.float64(12060.919171554253),
      np.float64(92.4440982404692),
    ),
    tuple(
      np.float64(11093.373191318327),
      np.float64(8122.487942122187),
      np.float64(100.48231511254019),
    ),
    tuple(
      np.float64(11118.04759174312),
      np.float64(7699.397935779816),
      np.float64(100.98910550458716),
    ),
    tuple(
      np.float64(12765.066964285714),
      np.float64(12305.086096938776),
      np.float64(96.46045918367346),
    ),
    tuple(
      np.float64(10188.61607142857),
      np.float64(1672.154017857143),
      np.float64(78.125),
    ),
    tuple(
      np.float64(14851.619075049375),
      np.float64(5314.582990454246),
      np.float64(45.594346609611584),
    ),
    tuple(
      np.float64(9613.970588235294),
      np.float64(10082.720588235294),
      np.float64(89.61397058823529),
    ),
    tuple(
      np.float64(8348.75274122807),
      np.float64(3206.5515350877195),
      np.float64(110.3344298245614),
    ),
    tuple(
      np.float64(15579.477163461539),
      np.float64(14770.783253205129),
      np.float64(57.39182692307692),
    ),
    tuple(
      np.float64(18244.354340805472),
      np.float64(1110.84726443769),
      np.float64(45.117781155015194),
    ),
    tuple(
      np.float64(18613.505335016063),
      np.float64(10563.295949977053),
      np.float64(42.79127466727857),
    ),
    tuple(
      np.float64(9480.278201219513),
      np.float64(3495.776168699187),
      np.float64(111.78861788617886),
    ),
    tuple(
      np.float64(18227.25605282465),
      np.float64(7184.462123991196),
      np.float64(45.711436170212764),
    ),
    tuple(
      np.float64(14013.671875),
      np.float64(5532.2265625),
      np.float64(78.125),
    ),
    tuple(
      np.float64(16233.377659574468),
      np.float64(16021.165780141844),
      np.float64(66.21232269503547),
    ),
    tuple(
      np.float64(11126.171875),
      np.float64(15241.145833333334),
      np.float64(108.07291666666667),
    ),
    tuple(
      np.float64(10274.739583333334),
      np.float64(14743.489583333334),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(11843.310223509934),
      np.float64(15580.591197571744),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(12154.33087524178),
      np.float64(14088.869076402321),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(11777.34375),
      np.float64(14785.15625),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(11848.958333333334),
      np.float64(16934.895833333332),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(12495.360392720306),
      np.float64(16552.77179118774),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(13147.522522522522),
      np.float64(13575.333145645645),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(12964.311079545454),
      np.float64(18232.421875),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(13208.841463414634),
      np.float64(15853.658536585366),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(13385.794865145228),
      np.float64(17458.344139004148),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(13321.6059602649),
      np.float64(14462.696605960266),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(13325.721153846154),
      np.float64(12790.264423076924),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(14003.319474248927),
      np.float64(13275.885193133046),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(14104.817708333334),
      np.float64(12362.196180555555),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(14237.767269736842),
      np.float64(10656.86677631579),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(14277.34375),
      np.float64(11499.0234375),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(14918.89880952381),
      np.float64(12048.735119047618),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(15108.173076923076),
      np.float64(11051.307091346154),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(19205.645161290322),
      np.float64(277.7217741935484),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(19789.751838235294),
      np.float64(10659.466911764706),
      np.float64(117.1875),
    ),
  ])
# ---
# name: test_calculate_regionprops[sample2]
  list([
    np.float64(184957.763671875),
    np.float64(42.724609375),
    np.float64(7.080078125),
    np.float64(1.220703125),
    np.float64(46643.310546875),
    np.float64(9181.396484375),
    np.float64(1.46484375),
    np.float64(3.41796875),
    np.float64(2.197265625),
    np.float64(15.13671875),
    np.float64(1.220703125),
    np.float64(0.732421875),
    np.float64(36.1328125),
    np.float64(2.685546875),
    np.float64(2.44140625),
    np.float64(1.220703125),
    np.float64(1.708984375),
    np.float64(8.7890625),
    np.float64(1.708984375),
    np.float64(0.9765625),
    np.float64(2.685546875),
    np.float64(2.44140625),
    np.float64(5.859375),
    np.float64(5.859375),
    np.float64(0.9765625),
    np.float64(2.44140625),
    np.float64(60.05859375),
    np.float64(2.197265625),
    np.float64(1.708984375),
    np.float64(0.732421875),
    np.float64(114.501953125),
    np.float64(7.568359375),
    np.float64(28.076171875),
    np.float64(8.30078125),
    np.float64(2.9296875),
    np.float64(0.732421875),
    np.float64(1.708984375),
    np.float64(2.197265625),
    np.float64(4.39453125),
    np.float64(3.41796875),
    np.float64(6.103515625),
    np.float64(2.197265625),
    np.float64(0.9765625),
    np.float64(2.44140625),
    np.float64(2.44140625),
    np.float64(87.890625),
    np.float64(2.9296875),
    np.float64(60.546875),
    np.float64(1.46484375),
    np.float64(2.685546875),
    np.float64(16.6015625),
    np.float64(3.41796875),
    np.float64(0.9765625),
    np.float64(5.37109375),
    np.float64(2.685546875),
    np.float64(1.220703125),
    np.float64(0.732421875),
    np.float64(0.48828125),
    np.float64(1.708984375),
    np.float64(3.41796875),
    np.float64(0.732421875),
    np.float64(1.46484375),
    np.float64(0.9765625),
    np.float64(1.708984375),
    np.float64(0.48828125),
    np.float64(2.197265625),
    np.float64(0.732421875),
    np.float64(0.48828125),
    np.float64(1.220703125),
    np.float64(2.197265625),
    np.float64(1.220703125),
    np.float64(0.732421875),
    np.float64(0.9765625),
    np.float64(0.732421875),
    np.float64(1.220703125),
    np.float64(1.708984375),
    np.float64(0.244140625),
    np.float64(0.244140625),
    np.float64(0.244140625),
    np.float64(0.244140625),
    np.float64(0.48828125),
    np.float64(0.9765625),
    np.float64(0.732421875),
    np.float64(0.732421875),
  ])
# ---
# name: test_calculate_regionprops[sample2].1
  list([
    tuple(
      np.float64(212.628315295801),
      np.float64(194.69046294352992),
      np.float64(0.2870916145604399),
    ),
    tuple(
      np.float64(5.75),
      np.float64(95.72142857142858),
      np.float64(0.6357142857142857),
    ),
    tuple(
      np.float64(203.10344827586206),
      np.float64(37.62931034482759),
      np.float64(1.4870689655172413),
    ),
    tuple(
      np.float64(121.125),
      np.float64(20.375),
      np.float64(1.125),
    ),
    tuple(
      np.float64(304.47655992379),
      np.float64(184.07405941345505),
      np.float64(1.25),
    ),
    tuple(
      np.float64(368.446349748717),
      np.float64(108.84459675060494),
      np.float64(1.8746676150716621),
    ),
    tuple(
      np.float64(107.39583333333333),
      np.float64(63.125),
      np.float64(1.0416666666666667),
    ),
    tuple(
      np.float64(105.9375),
      np.float64(49.330357142857146),
      np.float64(1.0267857142857142),
    ),
    tuple(
      np.float64(61.736111111111114),
      np.float64(88.68055555555556),
      np.float64(0.8333333333333334),
    ),
    tuple(
      np.float64(26.391129032258064),
      np.float64(67.83266129032258),
      np.float64(0.6653225806451613),
    ),
    tuple(
      np.float64(167.0),
      np.float64(159.0),
      np.float64(1.25),
    ),
    tuple(
      np.float64(166.66666666666666),
      np.float64(49.166666666666664),
      np.float64(1.25),
    ),
    tuple(
      np.float64(184.33277027027026),
      np.float64(77.88429054054055),
      np.float64(1.3175675675675675),
    ),
    tuple(
      np.float64(58.40909090909091),
      np.float64(201.13636363636363),
      np.float64(0.7954545454545454),
    ),
    tuple(
      np.float64(237.1875),
      np.float64(131.5),
      np.float64(1.5),
    ),
    tuple(
      np.float64(145.375),
      np.float64(87.0),
      np.float64(1.125),
    ),
    tuple(
      np.float64(177.14285714285714),
      np.float64(99.73214285714286),
      np.float64(1.25),
    ),
    tuple(
      np.float64(151.14583333333334),
      np.float64(63.854166666666664),
      np.float64(1.1458333333333333),
    ),
    tuple(
      np.float64(203.03571428571428),
      np.float64(86.96428571428571),
      np.float64(1.3392857142857142),
    ),
    tuple(
      np.float64(223.4375),
      np.float64(111.40625),
      np.float64(1.40625),
    ),
    tuple(
      np.float64(96.64772727272727),
      np.float64(94.20454545454545),
      np.float64(0.9090909090909091),
    ),
    tuple(
      np.float64(202.1875),
      np.float64(127.5),
      np.float64(1.3125),
    ),
    tuple(
      np.float64(296.4583333333333),
      np.float64(297.6302083333333),
      np.float64(1.640625),
    ),
    tuple(
      np.float64(99.6875),
      np.float64(122.39583333333333),
      np.float64(0.8854166666666666),
    ),
    tuple(
      np.float64(153.4375),
      np.float64(159.6875),
      np.float64(1.09375),
    ),
    tuple(
      np.float64(177.5),
      np.float64(142.1875),
      np.float64(1.1875),
    ),
    tuple(
      np.float64(195.6758130081301),
      np.float64(201.0086382113821),
      np.float64(1.247459349593496),
    ),
    tuple(
      np.float64(248.68055555555554),
      np.float64(205.27777777777777),
      np.float64(1.4583333333333333),
    ),
    tuple(
      np.float64(217.5),
      np.float64(227.5),
      np.float64(1.3392857142857142),
    ),
    tuple(
      np.float64(199.16666666666666),
      np.float64(181.45833333333334),
      np.float64(1.25),
    ),
    tuple(
      np.float64(368.68736673773986),
      np.float64(304.91337953091687),
      np.float64(1.8643390191897655),
    ),
    tuple(
      np.float64(195.78629032258064),
      np.float64(162.03629032258064),
      np.float64(1.25),
    ),
    tuple(
      np.float64(201.52717391304347),
      np.float64(238.125),
      np.float64(1.2554347826086956),
    ),
    tuple(
      np.float64(149.79779411764707),
      np.float64(235.6433823529412),
      np.float64(1.0294117647058822),
    ),
    tuple(
      np.float64(149.79166666666666),
      np.float64(238.02083333333334),
      np.float64(1.0416666666666667),
    ),
    tuple(
      np.float64(208.33333333333334),
      np.float64(231.875),
      np.float64(1.25),
    ),
    tuple(
      np.float64(229.55357142857142),
      np.float64(225.17857142857142),
      np.float64(1.3392857142857142),
    ),
    tuple(
      np.float64(265.69444444444446),
      np.float64(233.88888888888889),
      np.float64(1.4583333333333333),
    ),
    tuple(
      np.float64(273.2638888888889),
      np.float64(252.67361111111111),
      np.float64(1.4930555555555556),
    ),
    tuple(
      np.float64(192.41071428571428),
      np.float64(234.6875),
      np.float64(1.1607142857142858),
    ),
    tuple(
      np.float64(116.75),
      np.float64(188.05),
      np.float64(0.875),
    ),
    tuple(
      np.float64(198.75),
      np.float64(234.86111111111111),
      np.float64(1.1805555555555556),
    ),
    tuple(
      np.float64(257.34375),
      np.float64(222.96875),
      np.float64(1.40625),
    ),
    tuple(
      np.float64(281.0),
      np.float64(254.1875),
      np.float64(1.5),
    ),
    tuple(
      np.float64(198.8125),
      np.float64(222.5),
      np.float64(1.1875),
    ),
    tuple(
      np.float64(387.0486111111111),
      np.float64(344.1111111111111),
      np.float64(1.8559027777777777),
    ),
    tuple(
      np.float64(128.75),
      np.float64(291.6145833333333),
      np.float64(0.8854166666666666),
    ),
    tuple(
      np.float64(387.73941532258067),
      np.float64(369.851310483871),
      np.float64(1.8472782258064515),
    ),
    tuple(
      np.float64(253.22916666666666),
      np.float64(288.6458333333333),
      np.float64(1.3541666666666667),
    ),
    tuple(
      np.float64(205.0),
      np.float64(245.51136363636363),
      np.float64(1.1931818181818181),
    ),
    tuple(
      np.float64(79.47610294117646),
      np.float64(311.93014705882354),
      np.float64(0.6525735294117647),
    ),
    tuple(
      np.float64(231.42857142857142),
      np.float64(260.17857142857144),
      np.float64(1.2946428571428572),
    ),
    tuple(
      np.float64(269.21875),
      np.float64(281.40625),
      np.float64(1.40625),
    ),
    tuple(
      np.float64(227.41477272727272),
      np.float64(220.6534090909091),
      np.float64(1.2784090909090908),
    ),
    tuple(
      np.float64(160.73863636363637),
      np.float64(313.46590909090907),
      np.float64(0.9659090909090909),
    ),
    tuple(
      np.float64(263.125),
      np.float64(247.25),
      np.float64(1.375),
    ),
    tuple(
      np.float64(125.20833333333333),
      np.float64(232.08333333333334),
      np.float64(0.8333333333333334),
    ),
    tuple(
      np.float64(150.3125),
      np.float64(235.625),
      np.float64(0.9375),
    ),
    tuple(
      np.float64(181.51785714285714),
      np.float64(241.78571428571428),
      np.float64(1.0714285714285714),
    ),
    tuple(
      np.float64(120.66964285714286),
      np.float64(293.5267857142857),
      np.float64(0.8035714285714286),
    ),
    tuple(
      np.float64(130.83333333333334),
      np.float64(251.66666666666666),
      np.float64(0.8333333333333334),
    ),
    tuple(
      np.float64(199.6875),
      np.float64(311.7708333333333),
      np.float64(1.1458333333333333),
    ),
    tuple(
      np.float64(190.9375),
      np.float64(277.34375),
      np.float64(1.09375),
    ),
    tuple(
      np.float64(108.30357142857143),
      np.float64(297.05357142857144),
      np.float64(0.7142857142857143),
    ),
    tuple(
      np.float64(159.6875),
      np.float64(277.8125),
      np.float64(0.9375),
    ),
    tuple(
      np.float64(123.68055555555556),
      np.float64(353.47222222222223),
      np.float64(0.7638888888888888),
    ),
    tuple(
      np.float64(185.41666666666666),
      np.float64(306.6666666666667),
      np.float64(1.0416666666666667),
    ),
    tuple(
      np.float64(165.3125),
      np.float64(308.75),
      np.float64(0.9375),
    ),
    tuple(
      np.float64(127.875),
      np.float64(383.0),
      np.float64(0.75),
    ),
    tuple(
      np.float64(174.58333333333334),
      np.float64(328.47222222222223),
      np.float64(0.9722222222222222),
    ),
    tuple(
      np.float64(129.75),
      np.float64(291.5),
      np.float64(0.75),
    ),
    tuple(
      np.float64(147.91666666666666),
      np.float64(367.0833333333333),
      np.float64(0.8333333333333334),
    ),
    tuple(
      np.float64(202.03125),
      np.float64(336.5625),
      np.float64(1.09375),
    ),
    tuple(
      np.float64(193.33333333333334),
      np.float64(274.7916666666667),
      np.float64(1.0416666666666667),
    ),
    tuple(
      np.float64(143.125),
      np.float64(374.25),
      np.float64(0.75),
    ),
    tuple(
      np.float64(172.76785714285714),
      np.float64(377.5892857142857),
      np.float64(0.8928571428571429),
    ),
    tuple(
      np.float64(236.875),
      np.float64(255.625),
      np.float64(1.25),
    ),
    tuple(
      np.float64(236.875),
      np.float64(349.375),
      np.float64(1.25),
    ),
    tuple(
      np.float64(236.875),
      np.float64(364.375),
      np.float64(1.25),
    ),
    tuple(
      np.float64(244.375),
      np.float64(370.625),
      np.float64(1.25),
    ),
    tuple(
      np.float64(248.125),
      np.float64(372.1875),
      np.float64(1.25),
    ),
    tuple(
      np.float64(248.125),
      np.float64(375.9375),
      np.float64(1.25),
    ),
    tuple(
      np.float64(249.58333333333334),
      np.float64(374.5833333333333),
      np.float64(1.25),
    ),
    tuple(
      np.float64(252.5),
      np.float64(373.75),
      np.float64(1.25),
    ),
  ])
# ---
# name: test_calculate_regionprops[square height array (5 layers)]
  list([
    np.int64(125),
  ])
# ---
# name: test_calculate_regionprops[square height array (5 layers)].1
  list([
    tuple(
      np.float64(3.0),
      np.float64(3.0),
      np.float64(2.0),
    ),
  ])
# ---
# name: test_mask_slices[pyramid array, no slices/min/max]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 1]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_mask_slices[sample1, no slices/min/max]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]]
  '''
# ---
# name: test_mask_slices[sample2, no slices/min/max]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]
  
   [[1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    [1. 1. 1. 1. 0.]
    ...
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]
    [1. 1. 1. 0. 0.]]]
  '''
# ---
# name: test_mask_slices[square array, no slices/min/max]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_region_properties_by_slices[pyramid array]
  list([
    np.int64(81),
    np.int64(49),
    np.int64(25),
    np.int64(9),
    np.int64(1),
  ])
# ---
# name: test_region_properties_by_slices[pyramid array].1
  list([
    tuple(
      np.float64(5.0),
      np.float64(5.0),
    ),
    tuple(
      np.float64(5.0),
      np.float64(5.0),
    ),
    tuple(
      np.float64(5.0),
      np.float64(5.0),
    ),
    tuple(
      np.float64(5.0),
      np.float64(5.0),
    ),
    tuple(
      np.float64(5.0),
      np.float64(5.0),
    ),
  ])
# ---
# name: test_region_properties_by_slices[pyramid array].2
  list([
    12.041594578792296,
    9.219544457292887,
    6.4031242374328485,
    3.605551275463989,
    1.0,
  ])
# ---
# name: test_region_properties_by_slices[sample1]
  list([
    np.float64(399998474.12109375),
    np.float64(297546.38671875),
    np.float64(187683.10546875),
    np.float64(2426147.4609375),
    np.float64(13227844.23828125),
    np.float64(39672.8515625),
    np.float64(64086.9140625),
    np.float64(4577.63671875),
    np.float64(16784.66796875),
    np.float64(80871.58203125),
    np.float64(1341247.55859375),
    np.float64(7637023.92578125),
    np.float64(4618835.44921875),
    np.float64(22888.18359375),
    np.float64(6547546.38671875),
    np.float64(1525.87890625),
    np.float64(6809997.55859375),
    np.float64(149536.1328125),
    np.float64(547790.52734375),
    np.float64(4312133.7890625),
    np.float64(1525.87890625),
    np.float64(26747131.34765625),
    np.float64(28991.69921875),
    np.float64(4577.63671875),
    np.float64(1525.87890625),
    np.float64(1525.87890625),
    np.float64(1289367.67578125),
    np.float64(3051.7578125),
    np.float64(6103.515625),
    np.float64(3051.7578125),
    np.float64(13732.91015625),
    np.float64(3051.7578125),
    np.float64(213623.046875),
    np.float64(2124023.4375),
    np.float64(9155.2734375),
    np.float64(15258.7890625),
    np.float64(910949.70703125),
    np.float64(1852416.9921875),
    np.float64(3166198.73046875),
    np.float64(25939.94140625),
    np.float64(1902770.99609375),
    np.float64(6103.515625),
    np.float64(140380.859375),
    np.float64(53405.76171875),
    np.float64(172424.31640625),
    np.float64(1577758.7890625),
    np.float64(9231567.3828125),
    np.float64(437927.24609375),
    np.float64(3332519.53125),
    np.float64(5632019.04296875),
    np.float64(329589.84375),
    np.float64(4870605.46875),
    np.float64(485229.4921875),
    np.float64(16784.66796875),
    np.float64(5039978.02734375),
    np.float64(291442.87109375),
    np.float64(820922.8515625),
    np.float64(553894.04296875),
    np.float64(19078063.96484375),
    np.float64(825500.48828125),
    np.float64(386047.36328125),
    np.float64(396728.515625),
    np.float64(7629.39453125),
    np.float64(12207.03125),
    np.float64(73242.1875),
    np.float64(1350402.83203125),
    np.float64(212097.16796875),
    np.float64(276184.08203125),
    np.float64(900268.5546875),
    np.float64(1681518.5546875),
    np.float64(822448.73046875),
    np.float64(317382.8125),
    np.float64(196838.37890625),
    np.float64(317382.8125),
    np.float64(73242.1875),
    np.float64(59509.27734375),
    np.float64(111389.16015625),
    np.float64(251770.01953125),
    np.float64(1525.87890625),
    np.float64(273132.32421875),
    np.float64(245666.50390625),
    np.float64(347900.390625),
    np.float64(308227.5390625),
    np.float64(160217.28515625),
    np.float64(99182.12890625),
    np.float64(259399.4140625),
    np.float64(419616.69921875),
    np.float64(138854.98046875),
    np.float64(222778.3203125),
    np.float64(350952.1484375),
    np.float64(105285.64453125),
    np.float64(187683.10546875),
    np.float64(108337.40234375),
    np.float64(207519.53125),
    np.float64(274658.203125),
    np.float64(245666.50390625),
    np.float64(152587.890625),
    np.float64(430297.8515625),
    np.float64(100708.0078125),
    np.float64(144958.49609375),
    np.float64(170898.4375),
    np.float64(299072.265625),
    np.float64(196838.37890625),
    np.float64(274658.203125),
    np.float64(500488.28125),
    np.float64(73242.1875),
    np.float64(213623.046875),
    np.float64(193786.62109375),
    np.float64(16784.66796875),
    np.float64(158691.40625),
    np.float64(279235.83984375),
    np.float64(155639.6484375),
    np.float64(158691.40625),
    np.float64(349426.26953125),
    np.float64(177001.953125),
    np.float64(6103.515625),
    np.float64(74768.06640625),
    np.float64(404357.91015625),
    np.float64(183105.46875),
    np.float64(1382446.2890625),
    np.float64(788879.39453125),
    np.float64(15258.7890625),
    np.float64(22888.18359375),
    np.float64(398254.39453125),
    np.float64(508117.67578125),
    np.float64(67138.671875),
    np.float64(125122.0703125),
    np.float64(367736.81640625),
    np.float64(230407.71484375),
    np.float64(99182.12890625),
    np.float64(355529.78515625),
    np.float64(164794.921875),
    np.float64(115966.796875),
    np.float64(61035.15625),
    np.float64(160217.28515625),
    np.float64(158691.40625),
    np.float64(236511.23046875),
    np.float64(51879.8828125),
    np.float64(1525.87890625),
  ])
# ---
# name: test_region_properties_by_slices[sample1].1
  list([
    tuple(
      np.float64(9980.430975412275),
      np.float64(9980.44110824054),
    ),
    tuple(
      np.float64(152.84455128205127),
      np.float64(3131.209935897436),
    ),
    tuple(
      np.float64(186.10264227642276),
      np.float64(6253.8109756097565),
    ),
    tuple(
      np.float64(922.1452437106918),
      np.float64(7627.063679245283),
    ),
    tuple(
      np.float64(2702.386917464529),
      np.float64(17576.29556465567),
    ),
    tuple(
      np.float64(818.8100961538462),
      np.float64(12971.754807692309),
    ),
    tuple(
      np.float64(1212.797619047619),
      np.float64(10791.480654761905),
    ),
    tuple(
      np.float64(1419.2708333333333),
      np.float64(8385.416666666666),
    ),
    tuple(
      np.float64(1509.2329545454545),
      np.float64(3980.8238636363635),
    ),
    tuple(
      np.float64(1902.2700471698113),
      np.float64(1052.4764150943397),
    ),
    tuple(
      np.float64(2611.9880546075087),
      np.float64(4153.15699658703),
    ),
    tuple(
      np.float64(4911.330856643357),
      np.float64(12266.7878996004),
    ),
    tuple(
      np.float64(3829.234803435745),
      np.float64(1303.2318508424182),
    ),
    tuple(
      np.float64(2809.8958333333335),
      np.float64(10528.645833333334),
    ),
    tuple(
      np.float64(5193.145901305057),
      np.float64(6915.755724190166),
    ),
    tuple(
      np.float64(5117.1875),
      np.float64(117.1875),
    ),
    tuple(
      np.float64(7736.930736051983),
      np.float64(2810.731990813354),
    ),
    tuple(
      np.float64(6327.327806122449),
      np.float64(18248.565051020407),
    ),
    tuple(
      np.float64(7025.700731197771),
      np.float64(18842.596622562673),
    ),
    tuple(
      np.float64(8558.253715498939),
      np.float64(8169.34271054494),
    ),
    tuple(
      np.float64(7851.5625),
      np.float64(234.375),
    ),
    tuple(
      np.float64(12394.814931684637),
      np.float64(14956.083935906212),
    ),
    tuple(
      np.float64(10197.368421052632),
      np.float64(13168.174342105263),
    ),
    tuple(
      np.float64(10494.791666666666),
      np.float64(5950.520833333333),
    ),
    tuple(
      np.float64(10507.8125),
      np.float64(4765.625),
    ),
    tuple(
      np.float64(10664.0625),
      np.float64(9062.5),
    ),
    tuple(
      np.float64(11527.04326923077),
      np.float64(5323.6871301775145),
    ),
    tuple(
      np.float64(10742.1875),
      np.float64(9082.03125),
    ),
    tuple(
      np.float64(10917.96875),
      np.float64(14238.28125),
    ),
    tuple(
      np.float64(11230.46875),
      np.float64(12460.9375),
    ),
    tuple(
      np.float64(12174.479166666666),
      np.float64(2252.6041666666665),
    ),
    tuple(
      np.float64(13378.90625),
      np.float64(9335.9375),
    ),
    tuple(
      np.float64(14471.54017857143),
      np.float64(110.49107142857143),
    ),
    tuple(
      np.float64(15664.258934985632),
      np.float64(5214.170258620689),
    ),
    tuple(
      np.float64(15039.0625),
      np.float64(6035.15625),
    ),
    tuple(
      np.float64(16777.34375),
      np.float64(984.375),
    ),
    tuple(
      np.float64(17930.0800879397),
      np.float64(16629.501675041876),
    ),
    tuple(
      np.float64(19079.10317133443),
      np.float64(612.7085049423393),
    ),
    tuple(
      np.float64(19129.593373493975),
      np.float64(10940.135542168675),
    ),
    tuple(
      np.float64(18329.503676470587),
      np.float64(19949.448529411766),
    ),
    tuple(
      np.float64(19087.090266639934),
      np.float64(6402.021100641539),
    ),
    tuple(
      np.float64(18750.0),
      np.float64(2607.421875),
    ),
    tuple(
      np.float64(19878.141983695652),
      np.float64(16729.364809782608),
    ),
    tuple(
      np.float64(19928.571428571428),
      np.float64(12392.857142857143),
    ),
    tuple(
      np.float64(117.1875),
      np.float64(3098.0365044247787),
    ),
    tuple(
      np.float64(890.5041102514507),
      np.float64(7671.361218568665),
    ),
    tuple(
      np.float64(2561.3378099173556),
      np.float64(17681.153150826445),
    ),
    tuple(
      np.float64(2304.143074912892),
      np.float64(4273.873040069687),
    ),
    tuple(
      np.float64(3809.5774668040294),
      np.float64(1240.7709478021977),
    ),
    tuple(
      np.float64(4966.176171769168),
      np.float64(12265.984827959903),
    ),
    tuple(
      np.float64(3028.4288194444443),
      np.float64(3961.2268518518517),
    ),
    tuple(
      np.float64(5182.817884555137),
      np.float64(6880.347842261905),
    ),
    tuple(
      np.float64(4759.85161163522),
      np.float64(15927.672955974842),
    ),
    tuple(
      np.float64(5127.840909090909),
      np.float64(19943.18181818182),
    ),
    tuple(
      np.float64(7730.283075991523),
      np.float64(2809.259574629125),
    ),
    tuple(
      np.float64(7054.973821989529),
      np.float64(18800.515379581153),
    ),
    tuple(
      np.float64(7930.195748141264),
      np.float64(8735.115590148698),
    ),
    tuple(
      np.float64(8266.83023415978),
      np.float64(7179.967286501377),
    ),
    tuple(
      np.float64(12434.22828521155),
      np.float64(14933.975220946973),
    ),
    tuple(
      np.float64(9734.21615064695),
      np.float64(8598.515480591497),
    ),
    tuple(
      np.float64(11207.540760869566),
      np.float64(5446.516798418972),
    ),
    tuple(
      np.float64(11859.375),
      np.float64(5149.188701923077),
    ),
    tuple(
      np.float64(13039.0625),
      np.float64(16781.25),
    ),
    tuple(
      np.float64(13813.4765625),
      np.float64(14829.1015625),
    ),
    tuple(
      np.float64(14465.33203125),
      np.float64(46.38671875),
    ),
    tuple(
      np.float64(15679.510946327684),
      np.float64(5191.957980225989),
    ),
    tuple(
      np.float64(17642.760791366905),
      np.float64(16349.20188848921),
    ),
    tuple(
      np.float64(18170.75276243094),
      np.float64(16802.70200276243),
    ),
    tuple(
      np.float64(18874.47033898305),
      np.float64(338.5195974576271),
    ),
    tuple(
      np.float64(19245.37063294011),
      np.float64(10782.313407441015),
    ),
    tuple(
      np.float64(19182.224025974025),
      np.float64(6206.154336734694),
    ),
    tuple(
      np.float64(18757.32421875),
      np.float64(11515.737680288461),
    ),
    tuple(
      np.float64(18825.399709302324),
      np.float64(6745.700096899225),
    ),
    tuple(
      np.float64(19605.994591346152),
      np.float64(1089.8061899038462),
    ),
    tuple(
      np.float64(19895.01953125),
      np.float64(16681.315104166668),
    ),
    tuple(
      np.float64(59.094551282051285),
      np.float64(3037.860576923077),
    ),
    tuple(
      np.float64(135.91609589041096),
      np.float64(16546.982020547945),
    ),
    tuple(
      np.float64(450.5208333333333),
      np.float64(7697.443181818182),
    ),
    tuple(
      np.float64(312.5),
      np.float64(17500.0),
    ),
    tuple(
      np.float64(958.0132681564246),
      np.float64(16932.175279329607),
    ),
    tuple(
      np.float64(1305.560947204969),
      np.float64(17802.067158385093),
    ),
    tuple(
      np.float64(1415.672971491228),
      np.float64(7506.853070175439),
    ),
    tuple(
      np.float64(1697.865099009901),
      np.float64(16984.065594059404),
    ),
    tuple(
      np.float64(1707.5892857142858),
      np.float64(16155.13392857143),
    ),
    tuple(
      np.float64(2285.456730769231),
      np.float64(4179.6875),
    ),
    tuple(
      np.float64(2344.2095588235293),
      np.float64(17708.639705882353),
    ),
    tuple(
      np.float64(2859.375),
      np.float64(882.3863636363636),
    ),
    tuple(
      np.float64(2897.0638736263736),
      np.float64(17070.74175824176),
    ),
    tuple(
      np.float64(3165.667808219178),
      np.float64(17919.78809931507),
    ),
    tuple(
      np.float64(3652.34375),
      np.float64(1078.4646739130435),
    ),
    tuple(
      np.float64(3800.9510869565215),
      np.float64(11925.951086956522),
    ),
    tuple(
      np.float64(3908.473069105691),
      np.float64(19112.360264227642),
    ),
    tuple(
      np.float64(3907.9005281690143),
      np.float64(17262.874119718308),
    ),
    tuple(
      np.float64(4301.183363970588),
      np.float64(6153.205422794118),
    ),
    tuple(
      np.float64(4389.756944444444),
      np.float64(5329.210069444444),
    ),
    tuple(
      np.float64(4432.016692546584),
      np.float64(11244.419642857143),
    ),
    tuple(
      np.float64(4375.0),
      np.float64(16639.0625),
    ),
    tuple(
      np.float64(4579.454787234043),
      np.float64(1235.7324911347519),
    ),
    tuple(
      np.float64(4698.153409090909),
      np.float64(12079.782196969696),
    ),
    tuple(
      np.float64(4803.453947368421),
      np.float64(15842.927631578947),
    ),
    tuple(
      np.float64(5087.541852678572),
      np.float64(6582.03125),
    ),
    tuple(
      np.float64(5219.826211734694),
      np.float64(5765.106823979592),
    ),
    tuple(
      np.float64(5251.332364341085),
      np.float64(12872.456395348838),
    ),
    tuple(
      np.float64(5550.564236111111),
      np.float64(9060.980902777777),
    ),
    tuple(
      np.float64(5706.459603658536),
      np.float64(12040.301067073171),
    ),
    tuple(
      np.float64(5609.537760416667),
      np.float64(8052.571614583333),
    ),
    tuple(
      np.float64(5905.691964285715),
      np.float64(3233.816964285714),
    ),
    tuple(
      np.float64(5944.574311023622),
      np.float64(6415.1697834645665),
    ),
    tuple(
      np.float64(6654.829545454545),
      np.float64(12290.482954545454),
    ),
    tuple(
      np.float64(7538.311298076923),
      np.float64(3420.222355769231),
    ),
    tuple(
      np.float64(7911.116803278688),
      np.float64(8707.095286885246),
    ),
    tuple(
      np.float64(8309.206495098038),
      np.float64(7039.675245098039),
    ),
    tuple(
      np.float64(8316.556490384615),
      np.float64(3044.621394230769),
    ),
    tuple(
      np.float64(8823.348799126637),
      np.float64(2274.3245087336245),
    ),
    tuple(
      np.float64(8984.038254310344),
      np.float64(15595.703125),
    ),
    tuple(
      np.float64(9277.34375),
      np.float64(8457.03125),
    ),
    tuple(
      np.float64(9390.146683673469),
      np.float64(14691.485969387755),
    ),
    tuple(
      np.float64(9963.590801886792),
      np.float64(15617.334905660377),
    ),
    tuple(
      np.float64(10274.739583333334),
      np.float64(14743.489583333334),
    ),
    tuple(
      np.float64(11843.310223509934),
      np.float64(15580.591197571744),
    ),
    tuple(
      np.float64(12154.33087524178),
      np.float64(14088.869076402321),
    ),
    tuple(
      np.float64(11777.34375),
      np.float64(14785.15625),
    ),
    tuple(
      np.float64(11848.958333333334),
      np.float64(16934.895833333332),
    ),
    tuple(
      np.float64(12495.360392720306),
      np.float64(16552.77179118774),
    ),
    tuple(
      np.float64(13147.522522522522),
      np.float64(13575.333145645645),
    ),
    tuple(
      np.float64(12964.311079545454),
      np.float64(18232.421875),
    ),
    tuple(
      np.float64(13208.841463414634),
      np.float64(15853.658536585366),
    ),
    tuple(
      np.float64(13385.794865145228),
      np.float64(17458.344139004148),
    ),
    tuple(
      np.float64(13321.6059602649),
      np.float64(14462.696605960266),
    ),
    tuple(
      np.float64(13325.721153846154),
      np.float64(12790.264423076924),
    ),
    tuple(
      np.float64(14003.319474248927),
      np.float64(13275.885193133046),
    ),
    tuple(
      np.float64(14104.817708333334),
      np.float64(12362.196180555555),
    ),
    tuple(
      np.float64(14237.767269736842),
      np.float64(10656.86677631579),
    ),
    tuple(
      np.float64(14277.34375),
      np.float64(11499.0234375),
    ),
    tuple(
      np.float64(14918.89880952381),
      np.float64(12048.735119047618),
    ),
    tuple(
      np.float64(15108.173076923076),
      np.float64(11051.307091346154),
    ),
    tuple(
      np.float64(19205.645161290322),
      np.float64(277.7217741935484),
    ),
    tuple(
      np.float64(19789.751838235294),
      np.float64(10659.466911764706),
    ),
    tuple(
      np.float64(12304.6875),
      np.float64(15507.8125),
    ),
  ])
# ---
# name: test_region_properties_by_slices[sample1].2
  list([
    28256.663388993864,
    1016.3759243170068,
    611.4248375975988,
    2567.7466296163743,
    6548.068208687582,
    262.0392161132566,
    398.3608994994363,
    87.34640537108554,
    174.69281074217108,
    436.73202685542765,
    1743.8683035585714,
    5097.918156586078,
    3367.7674964516555,
    210.35800027869158,
    5163.495146594625,
    39.0625,
    4992.670408959518,
    544.0776670775047,
    943.987966687076,
    4086.8411405158017,
    39.0625,
    8946.080070780303,
    250.12204052472066,
    87.34640537108554,
    39.0625,
    39.0625,
    1661.8787020455193,
    78.125,
    87.34640537108554,
    78.125,
    174.69281074217108,
    78.125,
    977.3434377497503,
    1991.8044974971815,
    123.52647110032731,
    161.05881350068987,
    1495.639821802863,
    2384.092893697989,
    2470.529422006546,
    468.75,
    1950.388708253114,
    117.1875,
    785.1465329000696,
    585.9375,
    743.21474962658,
    2211.434352299713,
    6117.367095064776,
    841.4320011147663,
    3166.231895181163,
    4652.538894416951,
    769.4420157653207,
    4861.51605766208,
    891.6181414463537,
    237.6079113397742,
    4773.3032407469145,
    720.2769107260068,
    1288.470508005519,
    951.2340360848375,
    8605.549427958174,
    1620.5053525540266,
    805.2940675034494,
    778.3147986395029,
    123.52647110032731,
    161.05881350068987,
    625.0,
    1862.3433501656589,
    646.599428017455,
    664.0625,
    1631.2978920172734,
    2183.6601342771382,
    1806.1918783901394,
    704.2092334890604,
    594.9822738956178,
    741.1588266019639,
    509.3126879064569,
    431.4594147338774,
    436.73202685542765,
    682.197234241132,
    39.0625,
    692.1892635417715,
    644.2352540027595,
    754.42218421203,
    767.4563556401758,
    606.4130740726572,
    471.993983343538,
    646.599428017455,
    856.7075077914574,
    531.3074417474783,
    617.6323555016365,
    758.4565562088906,
    445.38102542935076,
    568.7585851000405,
    436.73202685542765,
    682.197234241132,
    667.5002926029322,
    654.8068208687582,
    524.0784322265132,
    843.2434822235509,
    407.82447300431835,
    563.3673867912484,
    580.7058104421292,
    758.4565562088906,
    580.7058104421292,
    631.0740008360747,
    957.6289587602549,
    349.38562148434215,
    664.0625,
    559.2898852842326,
    174.69281074217108,
    544.0776670775047,
    682.197234241132,
    587.2381397801918,
    507.8125,
    815.6489460086367,
    544.0776670775047,
    87.34640537108554,
    349.38562148434215,
    864.6852977022912,
    559.2898852842326,
    1877.0334026146818,
    1572.7204796247966,
    161.05881350068987,
    210.35800027869158,
    790.9553410670542,
    1001.2504389043982,
    333.7501463014661,
    457.2148402624854,
    805.2940675034494,
    617.6323555016365,
    436.73202685542765,
    805.2940675034494,
    544.0776670775047,
    436.73202685542765,
    333.7501463014661,
    494.10588440130925,
    631.0740008360747,
    617.6323555016365,
    370.57941330098197,
    39.0625,
  ])
# ---
# name: test_region_properties_by_slices[sample2]
  list([
    np.float64(159999.609375),
    np.float64(135931.25),
    np.float64(67.578125),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(1.953125),
    np.float64(1.171875),
    np.float64(3.515625),
    np.float64(2.734375),
    np.float64(23.046875),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(3.515625),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(2.734375),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(2.734375),
    np.float64(1.5625),
    np.float64(1.5625),
    np.float64(7.03125),
    np.float64(0.78125),
    np.float64(1.171875),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(8.203125),
    np.float64(1.953125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(2.734375),
    np.float64(6.25),
    np.float64(1.5625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(1.5625),
    np.float64(3.515625),
    np.float64(1.5625),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(25.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(2.734375),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(3.90625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(2.34375),
    np.float64(0.390625),
    np.float64(2.734375),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(1.5625),
    np.float64(1.5625),
    np.float64(1.5625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(1.5625),
    np.float64(1.5625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(5.46875),
    np.float64(0.78125),
    np.float64(74628.515625),
    np.float64(3.90625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(50.0),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(1.953125),
    np.float64(10.9375),
    np.float64(1.5625),
    np.float64(0.390625),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(1.953125),
    np.float64(94.921875),
    np.float64(1.5625),
    np.float64(1.5625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(11.328125),
    np.float64(43.75),
    np.float64(1.5625),
    np.float64(2.34375),
    np.float64(0.390625),
    np.float64(1.5625),
    np.float64(0.78125),
    np.float64(3.515625),
    np.float64(0.78125),
    np.float64(3.125),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(1.5625),
    np.float64(2.734375),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(3.125),
    np.float64(0.390625),
    np.float64(4.296875),
    np.float64(0.390625),
    np.float64(7.421875),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(1.953125),
    np.float64(1.5625),
    np.float64(0.390625),
    np.float64(1.953125),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(1.953125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(1.171875),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(1.5625),
    np.float64(1.171875),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(5.078125),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(14684.375),
    np.float64(0.390625),
    np.float64(1.5625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(7.03125),
    np.float64(0.390625),
    np.float64(2.34375),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(1.953125),
    np.float64(7.421875),
    np.float64(1.5625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(1.5625),
    np.float64(0.78125),
    np.float64(0.390625),
    np.float64(181.25),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(3.515625),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(1.953125),
    np.float64(3.125),
    np.float64(1.953125),
    np.float64(0.390625),
    np.float64(1.171875),
    np.float64(0.78125),
    np.float64(1.953125),
    np.float64(0.390625),
    np.float64(137.890625),
    np.float64(0.78125),
    np.float64(94.140625),
    np.float64(1.171875),
    np.float64(0.390625),
    np.float64(0.390625),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.78125),
    np.float64(0.390625),
  ])
# ---
# name: test_region_properties_by_slices[sample2].1
  list([
    tuple(
      np.float64(199.68798141597026),
      np.float64(199.68709335227868),
    ),
    tuple(
      np.float64(227.85961064301807),
      np.float64(188.81086307129064),
    ),
    tuple(
      np.float64(3.3092485549132946),
      np.float64(96.33309248554913),
    ),
    tuple(
      np.float64(0.625),
      np.float64(25.3125),
    ),
    tuple(
      np.float64(3.75),
      np.float64(30.3125),
    ),
    tuple(
      np.float64(9.375),
      np.float64(70.0),
    ),
    tuple(
      np.float64(10.75),
      np.float64(72.5),
    ),
    tuple(
      np.float64(11.25),
      np.float64(66.25),
    ),
    tuple(
      np.float64(12.847222222222221),
      np.float64(69.79166666666667),
    ),
    tuple(
      np.float64(13.75),
      np.float64(110.0),
    ),
    tuple(
      np.float64(17.02330508474576),
      np.float64(67.36228813559322),
    ),
    tuple(
      np.float64(15.0),
      np.float64(227.1875),
    ),
    tuple(
      np.float64(15.625),
      np.float64(64.375),
    ),
    tuple(
      np.float64(15.625),
      np.float64(82.8125),
    ),
    tuple(
      np.float64(16.38888888888889),
      np.float64(229.86111111111111),
    ),
    tuple(
      np.float64(19.0625),
      np.float64(228.75),
    ),
    tuple(
      np.float64(20.0),
      np.float64(114.6875),
    ),
    tuple(
      np.float64(20.0),
      np.float64(227.5),
    ),
    tuple(
      np.float64(21.071428571428573),
      np.float64(112.58928571428571),
    ),
    tuple(
      np.float64(23.125),
      np.float64(60.625),
    ),
    tuple(
      np.float64(24.375),
      np.float64(66.25),
    ),
    tuple(
      np.float64(25.446428571428573),
      np.float64(111.60714285714286),
    ),
    tuple(
      np.float64(26.875),
      np.float64(110.9375),
    ),
    tuple(
      np.float64(29.0625),
      np.float64(110.9375),
    ),
    tuple(
      np.float64(32.708333333333336),
      np.float64(111.14583333333333),
    ),
    tuple(
      np.float64(34.375),
      np.float64(107.8125),
    ),
    tuple(
      np.float64(34.375),
      np.float64(110.0),
    ),
    tuple(
      np.float64(34.375),
      np.float64(112.1875),
    ),
    tuple(
      np.float64(34.375),
      np.float64(350.0),
    ),
    tuple(
      np.float64(35.0),
      np.float64(104.375),
    ),
    tuple(
      np.float64(40.625),
      np.float64(102.5),
    ),
    tuple(
      np.float64(41.875),
      np.float64(115.625),
    ),
    tuple(
      np.float64(43.75),
      np.float64(83.125),
    ),
    tuple(
      np.float64(44.375),
      np.float64(158.75),
    ),
    tuple(
      np.float64(45.68452380952381),
      np.float64(194.46428571428572),
    ),
    tuple(
      np.float64(45.75),
      np.float64(210.0),
    ),
    tuple(
      np.float64(49.375),
      np.float64(215.0),
    ),
    tuple(
      np.float64(50.625),
      np.float64(153.125),
    ),
    tuple(
      np.float64(51.25),
      np.float64(164.6875),
    ),
    tuple(
      np.float64(51.875),
      np.float64(183.75),
    ),
    tuple(
      np.float64(54.910714285714285),
      np.float64(176.60714285714286),
    ),
    tuple(
      np.float64(55.0),
      np.float64(183.28125),
    ),
    tuple(
      np.float64(56.875),
      np.float64(175.9375),
    ),
    tuple(
      np.float64(56.875),
      np.float64(276.875),
    ),
    tuple(
      np.float64(58.125),
      np.float64(171.25),
    ),
    tuple(
      np.float64(58.125),
      np.float64(172.8125),
    ),
    tuple(
      np.float64(60.0),
      np.float64(277.1875),
    ),
    tuple(
      np.float64(61.52777777777778),
      np.float64(276.7361111111111),
    ),
    tuple(
      np.float64(63.75),
      np.float64(266.5625),
    ),
    tuple(
      np.float64(66.875),
      np.float64(271.5625),
    ),
    tuple(
      np.float64(68.125),
      np.float64(319.0625),
    ),
    tuple(
      np.float64(72.67992424242425),
      np.float64(313.4943181818182),
    ),
    tuple(
      np.float64(71.875),
      np.float64(306.875),
    ),
    tuple(
      np.float64(75.0),
      np.float64(282.5),
    ),
    tuple(
      np.float64(76.25),
      np.float64(164.375),
    ),
    tuple(
      np.float64(76.875),
      np.float64(311.875),
    ),
    tuple(
      np.float64(78.125),
      np.float64(161.25),
    ),
    tuple(
      np.float64(78.125),
      np.float64(244.6875),
    ),
    tuple(
      np.float64(78.75),
      np.float64(261.875),
    ),
    tuple(
      np.float64(80.0),
      np.float64(317.8125),
    ),
    tuple(
      np.float64(80.0),
      np.float64(325.3125),
    ),
    tuple(
      np.float64(85.0),
      np.float64(279.0625),
    ),
    tuple(
      np.float64(85.625),
      np.float64(323.75),
    ),
    tuple(
      np.float64(88.125),
      np.float64(295.0),
    ),
    tuple(
      np.float64(88.75),
      np.float64(301.5625),
    ),
    tuple(
      np.float64(90.625),
      np.float64(283.75),
    ),
    tuple(
      np.float64(93.30357142857143),
      np.float64(379.19642857142856),
    ),
    tuple(
      np.float64(95.0),
      np.float64(288.125),
    ),
    tuple(
      np.float64(100.0),
      np.float64(300.0),
    ),
    tuple(
      np.float64(102.1875),
      np.float64(399.0625),
    ),
    tuple(
      np.float64(103.75),
      np.float64(398.4375),
    ),
    tuple(
      np.float64(104.375),
      np.float64(294.6875),
    ),
    tuple(
      np.float64(105.0),
      np.float64(368.4375),
    ),
    tuple(
      np.float64(105.0),
      np.float64(399.375),
    ),
    tuple(
      np.float64(110.0),
      np.float64(302.5),
    ),
    tuple(
      np.float64(120.0),
      np.float64(376.5625),
    ),
    tuple(
      np.float64(125.625),
      np.float64(379.0625),
    ),
    tuple(
      np.float64(147.5),
      np.float64(59.6875),
    ),
    tuple(
      np.float64(147.5),
      np.float64(61.25),
    ),
    tuple(
      np.float64(149.19642857142858),
      np.float64(60.535714285714285),
    ),
    tuple(
      np.float64(150.0),
      np.float64(0.3125),
    ),
    tuple(
      np.float64(304.47813126475404),
      np.float64(184.07544661317255),
    ),
    tuple(
      np.float64(151.75),
      np.float64(9.0625),
    ),
    tuple(
      np.float64(153.75),
      np.float64(85.3125),
    ),
    tuple(
      np.float64(155.0),
      np.float64(13.75),
    ),
    tuple(
      np.float64(155.0),
      np.float64(15.625),
    ),
    tuple(
      np.float64(156.25),
      np.float64(84.0625),
    ),
    tuple(
      np.float64(157.5),
      np.float64(83.75),
    ),
    tuple(
      np.float64(158.75),
      np.float64(21.25),
    ),
    tuple(
      np.float64(167.0068359375),
      np.float64(70.8251953125),
    ),
    tuple(
      np.float64(166.875),
      np.float64(17.5),
    ),
    tuple(
      np.float64(173.125),
      np.float64(17.1875),
    ),
    tuple(
      np.float64(173.125),
      np.float64(65.9375),
    ),
    tuple(
      np.float64(175.875),
      np.float64(64.0),
    ),
    tuple(
      np.float64(176.80803571428572),
      np.float64(48.683035714285715),
    ),
    tuple(
      np.float64(177.34375),
      np.float64(61.25),
    ),
    tuple(
      np.float64(178.125),
      np.float64(53.75),
    ),
    tuple(
      np.float64(179.375),
      np.float64(45.625),
    ),
    tuple(
      np.float64(180.0),
      np.float64(53.125),
    ),
    tuple(
      np.float64(181.25),
      np.float64(45.0),
    ),
    tuple(
      np.float64(185.625),
      np.float64(71.5625),
    ),
    tuple(
      np.float64(186.875),
      np.float64(222.5),
    ),
    tuple(
      np.float64(190.625),
      np.float64(140.5),
    ),
    tuple(
      np.float64(196.32716049382717),
      np.float64(201.6718106995885),
    ),
    tuple(
      np.float64(190.9375),
      np.float64(152.1875),
    ),
    tuple(
      np.float64(190.625),
      np.float64(215.3125),
    ),
    tuple(
      np.float64(193.125),
      np.float64(140.0),
    ),
    tuple(
      np.float64(194.0625),
      np.float64(109.375),
    ),
    tuple(
      np.float64(195.06465517241378),
      np.float64(159.20258620689654),
    ),
    tuple(
      np.float64(199.921875),
      np.float64(237.29910714285714),
    ),
    tuple(
      np.float64(198.125),
      np.float64(245.9375),
    ),
    tuple(
      np.float64(199.47916666666666),
      np.float64(251.35416666666666),
    ),
    tuple(
      np.float64(200.625),
      np.float64(193.75),
    ),
    tuple(
      np.float64(200.625),
      np.float64(215.3125),
    ),
    tuple(
      np.float64(201.25),
      np.float64(169.0625),
    ),
    tuple(
      np.float64(204.375),
      np.float64(205.20833333333334),
    ),
    tuple(
      np.float64(205.625),
      np.float64(242.1875),
    ),
    tuple(
      np.float64(207.34375),
      np.float64(182.8125),
    ),
    tuple(
      np.float64(210.625),
      np.float64(231.5625),
    ),
    tuple(
      np.float64(211.25),
      np.float64(148.125),
    ),
    tuple(
      np.float64(211.40625),
      np.float64(203.75),
    ),
    tuple(
      np.float64(212.85714285714286),
      np.float64(230.53571428571428),
    ),
    tuple(
      np.float64(212.5),
      np.float64(257.5),
    ),
    tuple(
      np.float64(213.75),
      np.float64(235.625),
    ),
    tuple(
      np.float64(215.0),
      np.float64(205.0),
    ),
    tuple(
      np.float64(215.625),
      np.float64(187.5),
    ),
    tuple(
      np.float64(216.09375),
      np.float64(209.84375),
    ),
    tuple(
      np.float64(216.25),
      np.float64(188.75),
    ),
    tuple(
      np.float64(216.8181818181818),
      np.float64(236.5909090909091),
    ),
    tuple(
      np.float64(216.875),
      np.float64(170.0),
    ),
    tuple(
      np.float64(217.9934210526316),
      np.float64(211.2171052631579),
    ),
    tuple(
      np.float64(218.125),
      np.float64(268.4375),
    ),
    tuple(
      np.float64(219.375),
      np.float64(194.0625),
    ),
    tuple(
      np.float64(219.375),
      np.float64(206.875),
    ),
    tuple(
      np.float64(221.875),
      np.float64(209.375),
    ),
    tuple(
      np.float64(222.125),
      np.float64(211.375),
    ),
    tuple(
      np.float64(222.34375),
      np.float64(214.0625),
    ),
    tuple(
      np.float64(222.5),
      np.float64(196.875),
    ),
    tuple(
      np.float64(222.5),
      np.float64(309.375),
    ),
    tuple(
      np.float64(225.20833333333334),
      np.float64(271.4583333333333),
    ),
    tuple(
      np.float64(225.625),
      np.float64(270.0),
    ),
    tuple(
      np.float64(228.75),
      np.float64(271.875),
    ),
    tuple(
      np.float64(230.0),
      np.float64(263.4375),
    ),
    tuple(
      np.float64(230.625),
      np.float64(315.9375),
    ),
    tuple(
      np.float64(230.625),
      np.float64(317.5),
    ),
    tuple(
      np.float64(230.625),
      np.float64(318.75),
    ),
    tuple(
      np.float64(231.25),
      np.float64(272.5),
    ),
    tuple(
      np.float64(231.25),
      np.float64(278.75),
    ),
    tuple(
      np.float64(233.75),
      np.float64(364.375),
    ),
    tuple(
      np.float64(234.375),
      np.float64(315.625),
    ),
    tuple(
      np.float64(235.0),
      np.float64(260.9375),
    ),
    tuple(
      np.float64(235.625),
      np.float64(365.0),
    ),
    tuple(
      np.float64(235.625),
      np.float64(375.625),
    ),
    tuple(
      np.float64(236.875),
      np.float64(255.625),
    ),
    tuple(
      np.float64(236.875),
      np.float64(349.375),
    ),
    tuple(
      np.float64(236.875),
      np.float64(364.375),
    ),
    tuple(
      np.float64(244.375),
      np.float64(370.625),
    ),
    tuple(
      np.float64(248.125),
      np.float64(372.1875),
    ),
    tuple(
      np.float64(248.125),
      np.float64(375.9375),
    ),
    tuple(
      np.float64(249.58333333333334),
      np.float64(374.5833333333333),
    ),
    tuple(
      np.float64(252.5),
      np.float64(373.75),
    ),
    tuple(
      np.float64(265.0),
      np.float64(42.5),
    ),
    tuple(
      np.float64(286.25),
      np.float64(24.375),
    ),
    tuple(
      np.float64(292.3076923076923),
      np.float64(14.85576923076923),
    ),
    tuple(
      np.float64(298.125),
      np.float64(40.625),
    ),
    tuple(
      np.float64(299.375),
      np.float64(33.125),
    ),
    tuple(
      np.float64(368.5515701479038),
      np.float64(108.8759742764418),
    ),
    tuple(
      np.float64(303.125),
      np.float64(9.375),
    ),
    tuple(
      np.float64(303.125),
      np.float64(12.1875),
    ),
    tuple(
      np.float64(304.375),
      np.float64(12.5),
    ),
    tuple(
      np.float64(319.375),
      np.float64(63.125),
    ),
    tuple(
      np.float64(323.75),
      np.float64(128.4375),
    ),
    tuple(
      np.float64(325.625),
      np.float64(61.875),
    ),
    tuple(
      np.float64(326.28472222222223),
      np.float64(127.53472222222223),
    ),
    tuple(
      np.float64(328.125),
      np.float64(126.25),
    ),
    tuple(
      np.float64(331.25),
      np.float64(137.1875),
    ),
    tuple(
      np.float64(340.625),
      np.float64(73.75),
    ),
    tuple(
      np.float64(340.625),
      np.float64(150.625),
    ),
    tuple(
      np.float64(343.125),
      np.float64(147.5),
    ),
    tuple(
      np.float64(344.375),
      np.float64(151.5625),
    ),
    tuple(
      np.float64(345.625),
      np.float64(162.8125),
    ),
    tuple(
      np.float64(346.875),
      np.float64(118.125),
    ),
    tuple(
      np.float64(346.875),
      np.float64(155.625),
    ),
    tuple(
      np.float64(358.8157894736842),
      np.float64(350.23026315789474),
    ),
    tuple(
      np.float64(358.125),
      np.float64(198.4375),
    ),
    tuple(
      np.float64(358.125),
      np.float64(200.625),
    ),
    tuple(
      np.float64(359.375),
      np.float64(194.6875),
    ),
    tuple(
      np.float64(360.0),
      np.float64(217.5),
    ),
    tuple(
      np.float64(360.0),
      np.float64(222.1875),
    ),
    tuple(
      np.float64(362.5),
      np.float64(313.4375),
    ),
    tuple(
      np.float64(363.75),
      np.float64(301.875),
    ),
    tuple(
      np.float64(371.55307112068965),
      np.float64(306.98006465517244),
    ),
    tuple(
      np.float64(368.75),
      np.float64(323.125),
    ),
    tuple(
      np.float64(370.0),
      np.float64(324.0625),
    ),
    tuple(
      np.float64(371.25),
      np.float64(327.15277777777777),
    ),
    tuple(
      np.float64(371.875),
      np.float64(298.125),
    ),
    tuple(
      np.float64(375.0),
      np.float64(286.875),
    ),
    tuple(
      np.float64(376.875),
      np.float64(280.9375),
    ),
    tuple(
      np.float64(377.25),
      np.float64(287.5),
    ),
    tuple(
      np.float64(378.4375),
      np.float64(314.6875),
    ),
    tuple(
      np.float64(379.625),
      np.float64(313.0),
    ),
    tuple(
      np.float64(380.0),
      np.float64(306.25),
    ),
    tuple(
      np.float64(380.0),
      np.float64(315.625),
    ),
    tuple(
      np.float64(380.625),
      np.float64(233.4375),
    ),
    tuple(
      np.float64(381.25),
      np.float64(311.125),
    ),
    tuple(
      np.float64(381.875),
      np.float64(265.625),
    ),
    tuple(
      np.float64(392.23796033994336),
      np.float64(345.6055240793201),
    ),
    tuple(
      np.float64(388.75),
      np.float64(386.5625),
    ),
    tuple(
      np.float64(395.26711618257264),
      np.float64(373.6177385892116),
    ),
    tuple(
      np.float64(390.0),
      np.float64(333.75),
    ),
    tuple(
      np.float64(390.0),
      np.float64(383.75),
    ),
    tuple(
      np.float64(391.25),
      np.float64(331.875),
    ),
    tuple(
      np.float64(391.5625),
      np.float64(366.5625),
    ),
    tuple(
      np.float64(392.5),
      np.float64(336.5625),
    ),
    tuple(
      np.float64(392.5),
      np.float64(338.4375),
    ),
    tuple(
      np.float64(396.875),
      np.float64(364.0625),
    ),
    tuple(
      np.float64(399.375),
      np.float64(343.4375),
    ),
    tuple(
      np.float64(391.25),
      np.float64(8.75),
    ),
  ])
# ---
# name: test_region_properties_by_slices[sample2].2
  list([
    565.2436559794369,
    557.351788034272,
    18.97778306336122,
    1.25,
    1.25,
    0.625,
    3.1868871959954905,
    1.875,
    3.8017265814363874,
    4.375,
    7.551903733496608,
    1.25,
    0.625,
    1.25,
    3.125,
    1.25,
    1.25,
    0.625,
    3.365728004459065,
    0.625,
    0.625,
    3.1868871959954905,
    2.5,
    1.3975424859373686,
    7.5,
    1.25,
    1.875,
    1.25,
    0.625,
    0.625,
    0.625,
    1.875,
    0.625,
    0.625,
    6.875,
    3.1868871959954905,
    0.625,
    0.625,
    1.25,
    0.625,
    2.7950849718747373,
    5.038911092686593,
    2.5,
    0.625,
    0.625,
    1.25,
    2.5,
    3.1868871959954905,
    2.5,
    1.25,
    1.25,
    11.075028216668343,
    0.625,
    0.625,
    0.625,
    4.375,
    0.625,
    1.25,
    0.625,
    1.25,
    6.25,
    1.25,
    0.625,
    0.625,
    3.75,
    0.625,
    3.8017265814363874,
    0.625,
    0.625,
    1.3975424859373686,
    2.5,
    2.5,
    1.25,
    0.625,
    0.625,
    2.5,
    2.5,
    1.25,
    0.625,
    5.762215285808055,
    1.25,
    470.3788366837947,
    5.0,
    1.25,
    0.625,
    0.625,
    1.25,
    0.625,
    0.625,
    12.13530489934225,
    0.625,
    1.25,
    1.25,
    2.576941016011038,
    9.395810236483067,
    1.875,
    0.625,
    2.2534695471649933,
    0.625,
    0.625,
    1.25,
    0.625,
    1.976423537605237,
    20.00976324197765,
    1.3975424859373686,
    2.5,
    0.625,
    1.25,
    9.395810236483067,
    14.429245475768994,
    2.5,
    3.125,
    0.625,
    2.5,
    1.25,
    2.7950849718747373,
    1.25,
    5.038911092686593,
    1.25,
    0.625,
    1.875,
    3.365728004459065,
    1.875,
    0.625,
    1.875,
    0.625,
    4.419417382415922,
    0.625,
    3.365728004459065,
    0.625,
    6.25,
    1.25,
    1.25,
    0.625,
    0.625,
    1.976423537605237,
    2.576941016011038,
    0.625,
    3.125,
    1.3975424859373686,
    0.625,
    0.625,
    1.25,
    1.25,
    0.625,
    0.625,
    3.125,
    0.625,
    0.625,
    1.875,
    1.25,
    0.625,
    1.875,
    0.625,
    0.625,
    0.625,
    0.625,
    1.25,
    2.5,
    1.3975424859373686,
    1.875,
    0.625,
    0.625,
    5.659615711335886,
    0.625,
    0.625,
    323.0476212959941,
    0.625,
    2.5,
    0.625,
    0.625,
    1.25,
    0.625,
    5.762215285808055,
    0.625,
    3.75,
    0.625,
    0.625,
    0.625,
    1.25,
    1.25,
    0.625,
    3.125,
    8.338540040078959,
    2.5,
    0.625,
    1.25,
    0.625,
    2.5,
    1.25,
    0.625,
    25.194555463432966,
    0.625,
    1.25,
    3.6443449342783127,
    0.625,
    0.625,
    1.25,
    3.1868871959954905,
    5.038911092686593,
    1.976423537605237,
    0.625,
    1.875,
    1.25,
    2.2534695471649933,
    0.625,
    27.985766471547638,
    1.25,
    24.906073556464094,
    1.875,
    0.625,
    0.625,
    1.3975424859373686,
    1.25,
    1.25,
    1.25,
    1.25,
    0.625,
  ])
# ---
# name: test_region_properties_by_slices[square array]
  list([
    np.int64(25),
    np.int64(25),
    np.int64(25),
    np.int64(25),
    np.int64(25),
  ])
# ---
# name: test_region_properties_by_slices[square array].1
  list([
    tuple(
      np.float64(3.0),
      np.float64(3.0),
    ),
    tuple(
      np.float64(3.0),
      np.float64(3.0),
    ),
    tuple(
      np.float64(3.0),
      np.float64(3.0),
    ),
    tuple(
      np.float64(3.0),
      np.float64(3.0),
    ),
    tuple(
      np.float64(3.0),
      np.float64(3.0),
    ),
  ])
# ---
# name: test_region_properties_by_slices[square array].2
  list([
    6.4031242374328485,
    6.4031242374328485,
    6.4031242374328485,
    6.4031242374328485,
    6.4031242374328485,
  ])
# ---
# name: test_segment_slices[pyramid height array (2 layers)]
  '''
  [[[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 1]
    [1 1]
    [1 1]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [1 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]
  
   [[0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]
    [0 0]]]
  '''
# ---
# name: test_segment_slices[pyramid height array (5 layers)]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 1]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 1 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 1 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 1 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [1 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_segment_slices[sample1 segment with label]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]]
  '''
# ---
# name: test_segment_slices[sample2 segment with label]
  '''
  [[[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   [[1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    ...
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]
    [1. 0. 0. 0. 0.]]
  
   ...
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]
  
   [[1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    [1. 1. 5. 6. 0.]
    ...
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]
    [1. 1. 5. 0. 0.]]]
  '''
# ---
# name: test_segment_slices[simple three layers with three segments using label]
  '''
  [[[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [0 0 0]
    [0 0 0]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [0 0 0]
    [2 2 2]
    [0 0 0]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [0 0 0]
    [0 0 0]
    [3 3 3]
    [0 0 0]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [0 0 0]]
  
   [[0 0 0]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [3 3 3]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]
  
   [[0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]
    [0 0 0]]]
  '''
# ---
# name: test_segment_slices[simple three layers with three segments using watershed]
  '''
  [[[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [2 2 2]
    [2 2 2]
    [2 2 2]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [3 3 3]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [4 4 4]
    [4 4 4]
    [4 4 4]
    [1 1 1]
    [1 1 1]
    [3 3 3]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]
  
   [[1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]
    [1 1 1]]]
  '''
# ---
# name: test_segment_slices[square height array (5 layers)]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_slicer[pyramid]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [5 5 5 5 5]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [4 4 4 4 4]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [3 3 3 3 3]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [2 2 2 2 2]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [1 1 1 1 1]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
# name: test_slicer[sample1]
  '''
  [[[-174.70613343 -174.70613343 -174.70613343 -174.70613343 -174.70613343]
    [-172.72802957 -172.72802957 -172.72802957 -172.72802957 -172.72802957]
    [-171.17192119 -171.17192119 -171.17192119 -171.17192119 -171.17192119]
    ...
    [-234.84049096 -234.84049096 -234.84049096 -234.84049096 -234.84049096]
    [-234.15474828 -234.15474828 -234.15474828 -234.15474828 -234.15474828]
    [-234.7613668  -234.7613668  -234.7613668  -234.7613668  -234.7613668 ]]
  
   [[-172.83352844 -172.83352844 -172.83352844 -172.83352844 -172.83352844]
    [-173.3610228  -173.3610228  -173.3610228  -173.3610228  -173.3610228 ]
    [-171.80491443 -171.80491443 -171.80491443 -171.80491443 -171.80491443]
    ...
    [-234.41849546 -234.41849546 -234.41849546 -234.41849546 -234.41849546]
    [-234.33937131 -234.33937131 -234.33937131 -234.33937131 -234.33937131]
    [-236.08010271 -236.08010271 -236.08010271 -236.08010271 -236.08010271]]
  
   [[-174.73250815 -174.73250815 -174.73250815 -174.73250815 -174.73250815]
    [-172.33240879 -172.33240879 -172.33240879 -172.33240879 -172.33240879]
    [-174.25776322 -174.25776322 -174.25776322 -174.25776322 -174.25776322]
    ...
    [-236.10647743 -236.10647743 -236.10647743 -236.10647743 -236.10647743]
    [-234.31299659 -234.31299659 -234.31299659 -234.31299659 -234.31299659]
    [-231.22715456 -231.22715456 -231.22715456 -231.22715456 -231.22715456]]
  
   ...
  
   [[-229.5391726  -229.5391726  -229.5391726  -229.5391726  -229.5391726 ]
    [-227.64019288 -227.64019288 -227.64019288 -227.64019288 -227.64019288]
    [-229.22267598 -229.22267598 -229.22267598 -229.22267598 -229.22267598]
    ...
    [-298.1925641  -298.1925641  -298.1925641  -298.1925641  -298.1925641 ]
    [-300.64541289 -300.64541289 -300.64541289 -300.64541289 -300.64541289]
    [-301.06740839 -301.06740839 -301.06740839 -301.06740839 -301.06740839]]
  
   [[-228.29956084 -228.29956084 -228.29956084 -228.29956084 -228.29956084]
    [-228.40505971 -228.40505971 -228.40505971 -228.40505971 -228.40505971]
    [-226.7962019  -226.7962019  -226.7962019  -226.7962019  -226.7962019 ]
    ...
    [-300.32891628 -300.32891628 -300.32891628 -300.32891628 -300.32891628]
    [-299.74867247 -299.74867247 -299.74867247 -299.74867247 -299.74867247]
    [-299.32667698 -299.32667698 -299.32667698 -299.32667698 -299.32667698]]
  
   [[-225.08184522 -225.08184522 -225.08184522 -225.08184522 -225.08184522]
    [-227.00719965 -227.00719965 -227.00719965 -227.00719965 -227.00719965]
    [-226.00496036 -226.00496036 -226.00496036 -226.00496036 -226.00496036]
    ...
    [-299.51130001 -299.51130001 -299.51130001 -299.51130001 -299.51130001]
    [-297.98156635 -297.98156635 -297.98156635 -297.98156635 -297.98156635]
    [-296.21446023 -296.21446023 -296.21446023 -296.21446023 -296.21446023]]]
  '''
# ---
# name: test_slicer[sample2]
  '''
  [[[-267.23949016 -267.23949016 -267.23949016 -267.23949016 -267.23949016]
    [-267.99564425 -267.99564425 -267.99564425 -267.99564425 -267.99564425]
    [-268.16638872 -268.16638872 -268.16638872 -268.16638872 -268.16638872]
    ...
    [-286.72875199 -286.72875199 -286.72875199 -286.72875199 -286.72875199]
    [-285.7530693  -285.7530693  -285.7530693  -285.7530693  -285.7530693 ]
    [-285.21644382 -285.21644382 -285.21644382 -285.21644382 -285.21644382]]
  
   [[-267.38584256 -267.38584256 -267.38584256 -267.38584256 -267.38584256]
    [-267.84929184 -267.84929184 -267.84929184 -267.84929184 -267.84929184]
    [-267.94686011 -267.94686011 -267.94686011 -267.94686011 -267.94686011]
    ...
    [-287.89957123 -287.89957123 -287.89957123 -287.89957123 -287.89957123]
    [-288.04592363 -288.04592363 -288.04592363 -288.04592363 -288.04592363]
    [-287.82639503 -287.82639503 -287.82639503 -287.82639503 -287.82639503]]
  
   [[-267.53219497 -267.53219497 -267.53219497 -267.53219497 -267.53219497]
    [-267.72733151 -267.72733151 -267.72733151 -267.72733151 -267.72733151]
    [-267.92246805 -267.92246805 -267.92246805 -267.92246805 -267.92246805]
    ...
    [-288.19227604 -288.19227604 -288.19227604 -288.19227604 -288.19227604]
    [-287.77761089 -287.77761089 -287.77761089 -287.77761089 -287.77761089]
    [-287.28976954 -287.28976954 -287.28976954 -287.28976954 -287.28976954]]
  
   ...
  
   [[-172.96414976 -172.96414976 -172.96414976 -172.96414976 -172.96414976]
    [-172.30556394 -172.30556394 -172.30556394 -172.30556394 -172.30556394]
    [-171.45184158 -171.45184158 -171.45184158 -171.45184158 -171.45184158]
    ...
    [-191.96557024 -191.96557024 -191.96557024 -191.96557024 -191.96557024]
    [-191.8436099  -191.8436099  -191.8436099  -191.8436099  -191.8436099 ]
    [-191.94117817 -191.94117817 -191.94117817 -191.94117817 -191.94117817]]
  
   [[-173.11050216 -173.11050216 -173.11050216 -173.11050216 -173.11050216]
    [-172.45191634 -172.45191634 -172.45191634 -172.45191634 -172.45191634]
    [-171.81772259 -171.81772259 -171.81772259 -171.81772259 -171.81772259]
    ...
    [-191.57529716 -191.57529716 -191.57529716 -191.57529716 -191.57529716]
    [-191.79482577 -191.79482577 -191.79482577 -191.79482577 -191.79482577]
    [-191.52651303 -191.52651303 -191.52651303 -191.52651303 -191.52651303]]
  
   [[-172.62266081 -172.62266081 -172.62266081 -172.62266081 -172.62266081]
    [-171.93968293 -171.93968293 -171.93968293 -171.93968293 -171.93968293]
    [-171.30548917 -171.30548917 -171.30548917 -171.30548917 -171.30548917]
    ...
    [-191.08745582 -191.08745582 -191.08745582 -191.08745582 -191.08745582]
    [-191.30698442 -191.30698442 -191.30698442 -191.30698442 -191.30698442]
    [-191.57529716 -191.57529716 -191.57529716 -191.57529716 -191.57529716]]]
  '''
# ---
# name: test_slicer[square]
  '''
  [[[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [5 5 5 5 5]
    [0 0 0 0 0]]
  
   [[0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]
    [0 0 0 0 0]]]
  '''
# ---
